--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,10 @@ repositories {
 dependencies {
 
     apt 'net.simonvt.schematic:schematic-compiler:0.6.3'
-    compile('com.github.afollestad.material-dialogs:core:0.8.5.8@aar') {
-        transitive = true
-    }
+
+
+
+    compile 'com.afollestad.material-dialogs:commons:0.9.0.1'
     compile 'com.google.android.gms:play-services-gcm:9.2.1'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'net.simonvt.schematic:schematic:0.6.3'
