--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,17 +30,19 @@ dependencies {
 
 
 
+
+
     compile 'com.afollestad.material-dialogs:commons:0.9.0.1'
-
     compile 'com.google.android.gms:play-services-gcm:9.4.0'
-
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'net.simonvt.schematic:schematic:0.6.3'
     compile 'com.melnykov:floatingactionbutton:1.2.0'
-    compile 'com.android.support:design:24.1.1'
-    compile 'com.android.support:support-v4:24.1.1'
-    compile 'com.android.support:recyclerview-v7:24.1.1'
-    compile 'com.diogobernardino:williamchart:2.2'
+    compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:support-v4:24.2.0'
+    compile 'com.android.support:recyclerview-v7:24.2.0'
+    compile 'com.android.support:cardview-v7:24.2.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.0.9'
+
 }
 
 
