--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,11 +54,20 @@
         <activity
             android:name=".detail_flow.StockDetailActivity"
             android:label="@string/title_stock_detail"
-            android:parentActivityName=".detail_flow.StockListActivity">
+            android:parentActivityName=".detail_flow.StockListActivity"
+            >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sam_chordas.android.stockhawk.detail_flow.StockListActivity" />
         </activity>
+
+        <receiver android:name=".widget.SimpleWidgetProvider" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/simple_widget_info" />
+        </receiver>
 
 
     </application>
