--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <uses-permission android:name="com.example.sam_chordas.stockhawk.permission.C2D_MESSAGE" />
     <uses-permission android:name="com.google.android.gcm.demo.permission.C2D_MESSAGE" />
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <permission
         android:name="com.google.android.gcm.demo.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
@@ -35,6 +37,16 @@
             </intent-filter>
         </service>
         <service android:name=".service.StockIntentService" />
+
+        <service
+            android:name=".service.StockHistoryService"
+            android:exported="true"
+            android:permission="com.google.android.gms.permission.BIND_NETWORK_TASK_SERVICE">
+            <intent-filter>
+                <action android:name="com.google.android.gms.gcm.ACTION_TASK_READY" />
+            </intent-filter>
+        </service>
+        <service android:name=".service.HistoryIntentService" />
 
         <provider
             android:name=".data.generated.QuoteProvider"
